@@ -5,37 +5,16 @@
  *
  * @category   Sakle
  * @package    org.sabel.sakle
- * @author     Ebine Yutaka <ebine.yutaka@sabel.jp>
+ * @author     Ebine Yutaka <yutaka@ebine.org>
  * @copyright  2004-2008 Mori Reo <mori.reo@sabel.jp>
  * @license    http://www.opensource.org/licenses/bsd-license.php  BSD License
  */
 class Install extends Sabel_Sakle_Task
 {
-  /**
-   * @var Sabel_Http_Client
-   */
-  protected $client = null;
-  
-  /**
-   * @var Sabel_Util_FileSystem
-   */
-  protected $fs = null;
-  
-  /**
-   * @var float
-   */
-  protected $version = null;
-  
-  /**
-   * @var array
-   */
-  protected $addonRepositories = array(
-    "http://sabel.php-framework.org/addons",
-  );
+  protected $repo = "http://sabel.php-framework.org";
   
   public function initialize()
   {
-    $this->client = new Sabel_Http_Client("");
     $this->fs = new Sabel_Util_FileSystem(RUN_BASE);
   }
   
@@ -44,80 +23,113 @@ class Install extends Sabel_Sakle_Task
     $args = $this->arguments;
     
     if (Sabel_Console::hasOption("v", $args)) {
-      $this->version = Sabel_Console::getOption("v", $args);
+      $version = Sabel_Console::getOption("v", $args);
+    } else {
+      $version = "HEAD";
     }
     
     if (Sabel_Console::hasOption("a", $args)) {
-      $this->installAddon(Sabel_Console::getOption("a", $args));
-    } elseif (Sabel_Console::hasOption("l", $args)) {  // library
-      
-    } elseif (Sabel_Console::hasOption("p", $args)) {  // processor
-      
+      $this->installAddon(Sabel_Console::getOption("a", $args), $version);
     } else {
-      
+      $message = __METHOD__ . "() invalid install option.";
+      throw new Sabel_Exception_Runtime($message);
     }
   }
   
-  protected function installAddon($addon, $repository = "")
+  protected function installAddon($addon, $version)
   {
     $addon = lcfirst($addon);
-    foreach ($this->addonRepositories as $repo) {
-      $url = $repo . "?name={$addon}&type=xml&version={$this->version}";
-      
-      try {
-        $this->client->setUri($url);
-        $response = @$this->client->request();
-        $this->_installAddon($addon, $response->getContent());
-      } catch (Exception $e) {
-        $this->warning($e->getMessage() . " '{$repo}'");
-      }
+    
+    $url = "{$this->repo}/addons/{$addon}/{$version}";
+    
+    try {
+      $client = new Sabel_Http_Client($url);
+      $this->_installAddon($addon, $client->request()->getContent());
+    } catch (Exception $e) {
+      $this->warning($e->getMessage());
     }
   }
   
-  protected function _installAddon($name, $xml)
+  protected function _installAddon($name, $response)
   {
-    $doc  = Sabel_Xml_Document::create();
-    $root = $doc->loadXML($xml);
-    
-    if ($error = $root->getChild("error")) {
-      $this->error($error->getNodeValue());
-      $this->error("install failed.");
-      return;
+    if (substr($response, 0, 5) === "HEAD:") {
+      return $this->installAddon($name, trim(substr($response, 5)));
     }
     
-    $version   = $root->getChild("version")->getNodeValue();
-    $addonName = ucfirst($name);
-    $className = $addonName . "_Addon";
+    $addon = Sabel_Xml_Document::create()->loadXML($response);
     
-    if (class_exists($className, true)) {
-      eval ('$v = ' . $className . '::VERSION;');
+    $name = $addon->at("name");
+    $version = $addon->at("version");
+    
+    $files = $this->getAddonsFiles($addon);
+    
+    if (!isset($files["Addon.php"])) {
+      $message = __METHOD__ . "() invalid addon. Addon.php not exists.";
+    }
+    
+    $addonClass = ucfirst($name) . "_Addon";
+    
+    if (class_exists($addonClass, true)) {
+      $v = constant($addonClass . "::VERSION");
       if ($v === (float)$version) {
-        $this->message("{$addonName}_{$version} already installed.");
+        $this->message("{$name}_{$version} already installed.");
         return;
       } elseif ((float)$version > $v) {
         $_v = (strpos($v, ".") === false) ? "{$v}.0" : $v;
-        $this->message("upgrade " . $addonName . " from {$_v} to {$version}.");
+        $this->message("upgrade {$name} from {$_v} to {$version}.");
       } else {
         $this->message("nothing to install.");
         return;
       }
     }
     
-    $files = $root->getChildren("file");
-    foreach ($files as $i => $file) {
-      $path = $file->getChild("path")->getNodeValue();
-      $path = str_replace(":", DS, $path);
-      $source = $file->getChild("source")->getNodeValue();
+    $fs = new Sabel_Util_FileSystem(RUN_BASE);
+    
+    foreach ($files as $path => $file) {
+      $path = str_replace("/", DS, "addon/{$name}/{$path}");
       
-      if (!$this->fs->isFile($path)) {
-        $this->fs->mkfile($path)->write($source)->save();
+      if ($file["backup"] && $fs->isFile($path)) {
+        $oldFile = $path . ".old";
+        $fs->getFile($path)->copyTo(RUN_BASE . DS . $oldFile);
+        $this->message("{$path} saved as {$oldFile}");
+      }
+      
+      if (!$fs->isFile($path)) {
+        $fs->mkfile($path)->write($file["source"])->save();
       } else {
-        $this->fs->getFile($path)->write($source)->save();
+        $fs->getFile($path)->write($file["source"])->save();
       }
       
       $this->success($path);
     }
     
-    $this->success("install ok: {$addonName}_{$version}");
+    $this->success("install ok: {$name}_{$version}");
+  }
+  
+  protected function getAddonsFiles($dom)
+  {
+    $ret = array();
+    $files = $dom->files->item(0);
+    $basepath = $files->at("basepath");
+    
+    foreach ($files->file as $file) {
+      $path = $file->at("path");
+      $ret[$path] = array(
+        "source" => file_get_contents($this->repo . "/" . $basepath . "/" . $path),
+        "backup" => false
+      );
+    }
+    
+    $backup = $dom->backup;
+    if ($backup->length > 0) {
+      foreach ($backup->file as $file) {
+        $path = $file->at("path");
+        if (isset($ret[$path])) {
+          $ret[$path]["backup"] = true;
+        }
+      }
+    }
+    
+    return $ret;
   }
 }
